--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -35,3 +35,6 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           echo Test ---------------------> ${{ github.event.commits[0].message }}
+          request_cmd = "$(curl -i -o - --silent -X GET --header 'Accept: application/json' --header 'https://jsonplaceholder.typicode.com/posts')"
+          output_response=$(echo "$request_cmd" | grep body)
+          echo $output_response
