--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,12 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        uses: wei/curl@master
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
           echo Test ---------------------> ${{ github.event.commits[0].message }}
-          request_cmd = "$(curl -i -o - --silent -X GET --header 'Accept: application/json' --header 'https://jsonplaceholder.typicode.com/posts')"
-          output_response=$(echo "$request_cmd" | grep body)
-          echo $output_response
+          curl -X GET --header 'Accept: application/json' --header 'https://jsonplaceholder.typicode.com/posts'
+        # request_cmd = "$(curl -i -o - --silent -X GET --header 'Accept: application/json' --header 'https://jsonplaceholder.typicode.com/posts')"
+        # output_response=$(echo "$request_cmd" | grep body)
+        # echo $output_response
