--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          # echo Test ---------------------> ${ github.event.commits[0].message }
+          # echo Test ---------------------> "${{ github.event.commits[0].message }}"
