#14 - CI/CD Tool: Branch filter -- Change curl call to github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          echo Test ---------------------> "${{ github.event.commits[0].message }}"
+          # echo Test ---------------------> "${{ github.event.commits[0].message }}"
           curl -X GET "https://jsonplaceholder.typicode.com/posts"
