--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,8 @@ name: CI dev
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: ["dev"]
+    branches:
+      - dev
   pull_request:
     branches: ["dev"]
 
