--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           # echo Test ---------------------> "${{ github.event.commits[0].message }}"
-          curl -X GET "https://jsonplaceholder.typicode.com/posts"
+          # curl -X GET "https://jsonplaceholder.typicode.com/posts"
 
 #test change
