--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    if: ${{ contains(github.event.commits[0].message, 'build') }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
